tests/pass/fib.us
fn fib(n:i32) -> i32 {
    if n <= 0 {
        return -1;
    }

    if n == 1 or n == 2 {
        return 1;
    }

    return fib(n-1)+ fib(n-2);
}