tests/fail/arg_mismatch_inst.us

fn id<T>(v:T) -> T {
    return v;
}

fn main()  {
  
    id::<i32>(10,20);
}